@@ -5,6 +5,8 @@ Changes to Version 2.1-3
   o added fix for compatiblity with Rcmdr with missing data in several plotting functins.
   
   o deltaMethod() now reports confidence intervals.
+  
+  o print.summary.Anova.mlm() has new SSP and SSPE arguments to determine whether the corresponding matrices are printed.
 
 Changes to Version 2.1-2
 
